--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "umi": "^2.2.3",
     "umi-plugin-react": "^1.2.1"
+  },
+  "dependencies": {
+    "antd": "^3.10.3"
   }
 }
